fix: dropdown elements not aligned
The cause was a different padding for svg and png icons.

CMK-14913

--- a/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
@@ -259,11 +259,12 @@ div#top_heading {
         background-color: $page-menu-bg-color;
         opacity: 1;
         scrollbar-width: none; /* Firefox */
-        img {
+        img,
+        svg {
           width: 14px;
           height: 14px;
           margin-right: 5px;
-          padding-bottom: 2px;
+          padding: 0 0 2px 0;
           &.emblem {
             right: 0;
             bottom: -2px;
